src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <inlineHelpText>Total cost for entire campaign- not broken down by line item. Rolls into &quot;Total Cost&quot; field.</inlineHelpText>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Link__c</fullName>
        <description>Link where advertisement is displayed.</description>
        <inlineHelpText>If this is for advertising, what is the URL where the ad is displayed?</inlineHelpText>
        <label>Ad Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <description>What type of advertisement is this?</description>
        <inlineHelpText>What type of advertisement is this?</inlineHelpText>
        <label>Ad Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Speakers__c</fullName>
        <inlineHelpText>List the name of any additional people (Guidewire customer, analyst, etc) who will speak at this event. List name, title and company.</inlineHelpText>
        <label>Additional Speakers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analyst_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What is the name of the Analyst firm we are meeting with?</inlineHelpText>
        <label>Analyst Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyst_Meeting_Type__c</fullName>
        <label>Analyst Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Briefing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What is the name of the primary analyst who attended the meeting?</inlineHelpText>
        <label>Analyst Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Analyst Name)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <inlineHelpText>Enter if applicable.</inlineHelpText>
        <label>Booth Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Details__c</fullName>
        <inlineHelpText>Provide any additional information to explain budget numbers.</inlineHelpText>
        <label>Budget Details</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_Fees__c</fullName>
        <description>Any cost associated with consulting or advice received from another company about the event.</description>
        <inlineHelpText>Any cost associated with consulting or advice received from another company about the event.</inlineHelpText>
        <label>Consulting Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Content_Approval_Date__c</fullName>
        <description>If the content of this Campaign requires IP Committee Approval, what date was that approval granted?</description>
        <inlineHelpText>If the content of this Campaign requires IP Committee Approval, what date was that approval granted?</inlineHelpText>
        <label>Content Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Subject_to_IP_Review__c</fullName>
        <description>Is the content of this Campaign subject to Guidewire&apos;s IP Committee Review?</description>
        <inlineHelpText>Is the content of this Campaign subject to Guidewire&apos;s IP Committee Review?</inlineHelpText>
        <label>Content Subject to IP Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Cancellation_Policy__c</fullName>
        <label>Contract Cancellation Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <label>Contract Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Negotiations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Link__c</fullName>
        <description>What is the published link for this landing page?</description>
        <inlineHelpText>What is the published link for this landing page?</inlineHelpText>
        <label>Direct Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <description>Who can this web seminar be destributed to?</description>
        <inlineHelpText>Who can this web seminar be destributed to?</inlineHelpText>
        <label>Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Everyone - Open Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA Only - Customers, Partners, Etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Drayage_Costs__c</fullName>
        <inlineHelpText>Cost of internet, electrical, lead retrieval, Union set-up/tear-down, other professional fees, etc.</inlineHelpText>
        <label>Drayage Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <inlineHelpText>Address of event.</inlineHelpText>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <description>URL for Event or Tradeshow</description>
        <inlineHelpText>Enter URL for event or tradeshow</inlineHelpText>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exhibit_Hall_Hours__c</fullName>
        <label>Exhibit Hall Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exhibit_Supplier_Costs_GGE__c</fullName>
        <inlineHelpText>Costs for exhibit/booth supplier (GGE in North America).  Costs to ship booth and rent any additional pieces needed for the show.</inlineHelpText>
        <label>Exhibit Supplier Costs (GGE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>IF((StartDate) &gt;= DATE(2012, 8, 31), &quot;2013-Q1&quot;,
IF((StartDate) &lt;= DATE(2012, 11, 1), &quot;2013-Q2&quot;, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Action__c</fullName>
        <label>Form Action</label>
        <picklist>
            <picklistValues>
                <fullName>Generate Email to Campaign Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import information into SFDC Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import information into SFDC/Eloqua</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Future_Recommendation_From_PR_AR__c</fullName>
        <inlineHelpText>This is where someone from PR/AR would put their comments as to why we should or should not attend this event in the future.</inlineHelpText>
        <label>Future Recommendation From PR/AR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Recommendation__c</fullName>
        <inlineHelpText>Should we do this event in the future? If necessary, explain in the details section.</inlineHelpText>
        <label>Future Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-evaluate for next year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not continue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Recommendation_from_Demand_Gen__c</fullName>
        <inlineHelpText>This is where someone from Demand Gen would put their comments as to why we should or should not attend this event in the future.</inlineHelpText>
        <label>Future Recommendation from Demand Gen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Giveaway_Cost__c</fullName>
        <inlineHelpText>How much for giveaways? (Example: notepads, bags, pens, candy, anything with or without our logo on it that we hand out at an event.)</inlineHelpText>
        <label>Giveaway Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giveaways_Used__c</fullName>
        <inlineHelpText>What giveaways did we have/use at this event?</inlineHelpText>
        <label>Giveaways Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hosted_File_Expiration_Date__c</fullName>
        <inlineHelpText>What date will the hosted recording expire - if any.  (This is the date upon which the public will no longer be able to view the recording using an external URL.)  If the webinar will not expire, leave this field blank.</inlineHelpText>
        <label>Hosted File Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosted_File_Location__c</fullName>
        <inlineHelpText>For webinars only.  Where is the hosted file located?  This is the URL that you would send to someone outside of Guidewire to view the recording.  Either a GoToWebinar/Meeting, On24, WebEx or LiveMeeting URL.</inlineHelpText>
        <label>Hosted File Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hosted_on_Corporate_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the webinar available for viewing from any of our corporate websites? (www.guidewire.com, www.guidewire.fr, www.guidewire.de, www.guidewire.jp)</inlineHelpText>
        <label>Hosted on Corporate Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <inlineHelpText>What is the actual URL for the landing page? (Where the HTML can be edited.)</inlineHelpText>
        <label>Landing Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Campaign_Members_View__c</fullName>
        <label>Link to Campaign Members View</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Campaign_Performance_Report__c</fullName>
        <label>Link to Campaign Performance Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Campaign_Program_in_Marketo__c</fullName>
        <label>Link to Campaign Program in Marketo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Contacts_List_View__c</fullName>
        <label>Link to Contacts List View</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Lead_List_View__c</fullName>
        <label>Link to Lead List View</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Attendees__c</fullName>
        <inlineHelpText>Who will attend this event from the marketing department</inlineHelpText>
        <label>Marketing Attendees</label>
        <picklist>
            <picklistValues>
                <fullName>Amalia Gonzalez-Revilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Desmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Retson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Vannoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danielle Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Stott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellie Javadi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eugene Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James McCully</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judith Neumann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lissette Melo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryann Ibrahim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neil Betteridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neil Weiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginie Capri</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Producer_s__c</fullName>
        <inlineHelpText>Who is running/producing this event.  (Can be more than one person.)</inlineHelpText>
        <label>Marketing Producer(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Amalia Gonzalez-Revilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Desmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danielle Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darlene Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darrell Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Stott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eugene Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judith Neumann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karen Derossett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Pfeiffer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narihisa Hattori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginie Capri</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Media_Magazine__c</fullName>
        <description>Where is the advertisement running or promoted?</description>
        <inlineHelpText>Where is the advertisement running or promoted?</inlineHelpText>
        <label>Media/Magazine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mgmt_Team_Attending__c</fullName>
        <inlineHelpText>List those attending from Guidewire&apos;s Management Team</inlineHelpText>
        <label>Mgmt Team Attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>What are the next steps required post Analyst Meeting?</inlineHelpText>
        <label>Next Steps</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organizer_Email__c</fullName>
        <inlineHelpText>Email address of vendor or event/venue organizer</inlineHelpText>
        <label>Organizer/Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Organizer_Name__c</fullName>
        <inlineHelpText>Name of the vendor or event/venue organizer.</inlineHelpText>
        <label>Organizer/Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organizer_Phone_Number__c</fullName>
        <inlineHelpText>What is the phone number of the vendor or event/venue organizer?</inlineHelpText>
        <label>Organizer/Vendor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Original_File_Location__c</fullName>
        <inlineHelpText>For Webinars.  Where is the original file saved?  Should be somewhere on the Guidewire network.</inlineHelpText>
        <label>Original File Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Attendees__c</fullName>
        <inlineHelpText>List other attendees (PR reps, Product Management, Consultants, Partners, Analysts).</inlineHelpText>
        <label>Other Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Costs__c</fullName>
        <inlineHelpText>Provide explanation of other costs in Budget Detail field.</inlineHelpText>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outreach_Plan__c</fullName>
        <inlineHelpText>What marketing activities will be conducted to support this event? (Email/Direct mail, phoning? Who, what and when.)</inlineHelpText>
        <label>Outreach Plan</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>What is the Guidewire PO Number, if necessary?</description>
        <inlineHelpText>What is the Guidewire PO number?  If more than one, list all separating with semi-colons.</inlineHelpText>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Demo_Information__c</fullName>
        <inlineHelpText>List any information about product demos giving during the tradeshow or seminar. (Example for ACORD: PolicyCenter Demo, 11am on May 25th, Neil giving demo.)</inlineHelpText>
        <label>Product Demo Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <inlineHelpText>What Guidewire product is being promoted by this campaign?</inlineHelpText>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not GW Product Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Public_Landing_Page_URL__c</fullName>
        <inlineHelpText>This is the URL that we create to send out to the public.  Often this is a URL the re-directs the viewer to the real page.</inlineHelpText>
        <label>Public Landing Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recommended_Next_Steps__c</fullName>
        <description>Briefly describe what should happen when a response is received from this Campaign.</description>
        <inlineHelpText>Briefly describe what should happen when a response is received from this Campaign.</inlineHelpText>
        <label>Recommended Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redirect_Link__c</fullName>
        <description>What is the re-direct link for this landing page?</description>
        <inlineHelpText>What is the re-direct link for this landing page? (Get from MarCom.)</inlineHelpText>
        <label>Redirect Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>What region is this campaign taking place in?</description>
        <inlineHelpText>What region is this campaign taking place in?</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Australia/New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RoA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Attendees__c</fullName>
        <inlineHelpText>List all Sales consultants attending and the products they&apos;ll demo (if applicable).</inlineHelpText>
        <label>Sales Consultant Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Attending__c</fullName>
        <inlineHelpText>List all sales reps attending</inlineHelpText>
        <label>Sales Rep Attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Cost__c</fullName>
        <description>Speaker fees</description>
        <label>Speaker Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Speaker_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>List the name of the person (Guidewire customer, Analyst, etc) who will be speaking at this event.</inlineHelpText>
        <label>Speaker Name 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>List the name of the second person (Guidewire customer, analyst, etc) who will speak at this event.</inlineHelpText>
        <label>Speaker Name 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Speaker Name 2)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaking_Date_Time__c</fullName>
        <inlineHelpText>When will the speaking opportunity take place? (Please include date and time)</inlineHelpText>
        <label>Speaking Date/Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaking_Description__c</fullName>
        <inlineHelpText>Describe speaking opportunity and any other key information.</inlineHelpText>
        <label>Speaking Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Speaking_Location__c</fullName>
        <inlineHelpText>If at a tradeshow, where will the speaking opportunity take place? During what session, or room location?</inlineHelpText>
        <label>Speaking Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Details__c</fullName>
        <inlineHelpText>Enter any additional details about the sponsorship (Level, advertising included, etc.)</inlineHelpText>
        <label>Sponsorship Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Type__c</fullName>
        <label>Sponsorship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Booth 10x10 or smaller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth 10x20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabletop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth 20x20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <inlineHelpText>What is the subject line for the email invitation.</inlineHelpText>
        <label>Subject Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_E_Costs__c</fullName>
        <inlineHelpText>Estimated T&amp;E Costs.  (# of people attending x $1,200).  Use $1,200 if flying/hotel is required.)</inlineHelpText>
        <label>T&amp;E Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <inlineHelpText>What is the topic for this activity?</inlineHelpText>
        <label>Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Including_T_E__c</fullName>
        <description>Total cost of event including estimated travel expenses less any expected revenue generated.</description>
        <formula>Venue_Exhibit_Main_Item_Costs__c  +  Exhibit_Supplier_Costs_GGE__c  +  Drayage_Costs__c  +  Giveaway_Cost__c  +  Other_Costs__c  +  T_E_Costs__c  -  ExpectedRevenue +  Consulting_Fees__c  +  Speaker_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost of event including estimated travel expenses less any expected revenue generated.</inlineHelpText>
        <label>Total Cost Including T&amp;E Less Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Less_Revenue__c</fullName>
        <formula>Total_Cost__c  -  ExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Less Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Venue_Exhibit_Main_Item_Costs__c  +  Exhibit_Supplier_Costs_GGE__c  +  Drayage_Costs__c  +  Giveaway_Cost__c  +  Other_Costs__c +  Consulting_Fees__c  +  Speaker_Cost__c+ Actual_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Exhibit+Exhibit Supplier+Drayage+Giveaway+Other</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Exhibit_Main_Item_Costs__c</fullName>
        <inlineHelpText>If a tradeshow/sponsorship - how much for just the exhibit space or sponsorship costs.  Does not include electrical, lead retrieval, meeting rooms, etc. If an event at hotel or restaurant, how much for F&amp;B/Room Rental? If an Analyst report - how much?</inlineHelpText>
        <label>Venue/Exhibit/Main Item Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Webinar_Host__c</fullName>
        <inlineHelpText>Who hosted this webinar?  Usually someone from Marketing.</inlineHelpText>
        <label>Webinar Host</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Managed_By__c</fullName>
        <inlineHelpText>What software program was the webinar recoded with.  If &apos;Other&apos;, please contact marketing to have them add your selection to this list.</inlineHelpText>
        <label>Webinar Managed By</label>
        <picklist>
            <picklistValues>
                <fullName>GoToMeeting/Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Presenter__c</fullName>
        <inlineHelpText>Who was the main presenter?  If more than one person, add additional name in the description field.</inlineHelpText>
        <label>Webinar Presenter</label>
        <type>TextArea</type>
    </fields>
</CustomObject>